Styles: Fix hero gap between content and cta

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -18,6 +18,10 @@
     @apply text-center;
     @apply text-white;
     @apply z-1;
+
+    > *:last-child {
+      @apply mb-0;
+    }
   }
 
   .overlay {
